fix flash z-index on home

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -271,6 +271,7 @@ abbr[title], abbr[data-original-title] {
 .flash-container{
 	position: relative;
 	width: 100%;
+	z-index: 1031;
 	display: block;
 	.alert{
 		width: 100%;
